[update]スタイル設定

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,9 @@
 
 body {
   font-family: 'Bebas Neue', cursive;
-  background: #000;
+  background: #f8b195;
+  // background: #93a42a;
+  background: #343838;
   color: #fff;
   overflow-x: hidden;
 }
